--- a/homepage.html
+++ b/homepage.html
@@ -15,8 +15,8 @@
     <div class="page">
         <div class="top">
             <div id="btnMe" class="circle cirTop">
-                <a href="#">
-                    <i class="fa-solid fa-address-book" style="font-size: var(--iconSize); color: var(--colour5);"></i>
+                <a href="devpage.html">
+                    <i class="fa-solid fa-address-book" style="font-size: var(--iconSize); color: var(--colourLn);"></i>
                 </a>
             </div>
             <!--end of btn1 -->
@@ -27,7 +27,8 @@
             <div class="centerColumns cCol1">
                 <div id="btnSkills" class="circle cirCenterLeft">
                     <a href="#">
-                        <i class="fa-solid fa-cube" style="font-size: var(--iconSize); color: var(--colour5);"></i>
+                        <i class="fa-solid fa-cube" 
+                        style="font-size: var(--iconSize); color: var(--colourLn);"></i>
                     </a>
                 </div> <!-- end of btn2 -->
                 <div id="titleSkills" class="title titleSkills">Quick Skills</div> <!-- titleSkills -->
@@ -42,7 +43,8 @@
             <div class="centerColumns cCol3">
                 <div id="btnLinkedin" class="circle cirCenterRight">
                     <a href="#">
-                        <i class="fa-brands fa-linkedin" style="font-size: var(--iconSize); color: var(--colour5);"></i>
+                        <i class="fa-brands fa-linkedin" 
+                        style="font-size: var(--iconSize); color: var(--colourLn);"></i>
                     </a>
                 </div> <!-- end of btn3 -->
                 <div id="titleLinkedin" class="title titleLinkedin">Linkedin</div> <!-- titleLinkedin -->
@@ -53,7 +55,7 @@
             <div class="bottomColumns bCol1">
                 <div id="btnPDF" class="circle cirBottomLeft">
                     <a href="#">
-                        <i class="fa-solid fa-file" style="font-size: var(--iconSize); color: var(--colour5);"></i>
+                        <i class="fa-solid fa-file" style="font-size: var(--iconSize); color: var(--colourLn);"></i>
                     </a>
                 </div> <!-- end of btn4 -->
                 <div id="titlePDF" class="title titlePDF">Resume</div> <!-- titlePDF -->
@@ -62,9 +64,8 @@
             <div class="bottomColumns bCol2">
                 <div id="btnProj" class="circle cirBottomRight">
                     <a href="https://github.com/JamesPage2020?tab=repositories" target="_blank">
-                        <i class="fa-brands fa-github" style="font-size: var(--iconSize); color: var(--colour5);"></i>
+                        <i class="fa-brands fa-github" style="font-size: var(--iconSize); color: var(--colourLn);"></i>
                     </a>
-
                     <!-- <i class="fa-solid fa-file-code"></i> -->
                 </div> <!-- end of btn5 -->
                 <div id="titleProj" class="title titleProj">GitHub</div> <!-- end of titleProj -->
