--- a/devpage.html
+++ b/devpage.html
@@ -14,16 +14,18 @@
 <body>
     <div class="mainbox">
         <div class="header">
-            <div class="title">
-                <i class="fa-solid fa-address-book" style="font-size: var(--iconSize); color: var(--colourLn);"></i>
-               <p class="titleHead">About Me <em>~ in development</em></p>
+            <div class="titleHeader">
+                <div class="circle aboutMe">
+                    <i class="fa-solid fa-address-book" style="font-size: calc(var(--iconSizeNavbar)*1.5); color: var(--colourLn);"></i>
+                </div>
+                <p class="titleHead">About Me <em>~ in development</em></p>
             </div> <!-- end of title -->
             <div class="navbar">
-                <div class="navbox box1">
+                <div id="btnHome" class="navbox box1">
                     <div class="circle homepage">
                         <a href="homepage.html">
                             <i class="fa-solid fa-house-chimney"
-                                style="font-size: var(--iconSize); color: var(--colourLn);">
+                                style="font-size: var(--iconSizeNavbar); color: var(--colourLn);">
                             </i>
                         </a>
                     </div> <!-- end of homepage -->
@@ -33,7 +35,7 @@
                 <div class="navbox box2">
                     <div id="btnSkills" class="circle skills">
                         <a href="#">
-                            <i class="fa-solid fa-cube" style="font-size: var(--iconSize); color: var(--colourLn);"></i>
+                            <i class="fa-solid fa-cube" style="font-size: var(--iconSizeNavbar); color: var(--colourLn);"></i>
                         </a>
                     </div> <!-- end of btn2 -->
                     <div id="titleSkills" class="title titleSkills">Quick Skills</div> <!-- titleSkills -->
@@ -43,7 +45,7 @@
                     <div id="btnLinkedin" class="circle linkedin">
                         <a href="#">
                             <i class="fa-brands fa-linkedin"
-                                style="font-size: var(--iconSize); color: var(--colourLn);"></i>
+                                style="font-size: var(--iconSizeNavbar); color: var(--colourLn);"></i>
                         </a>
                     </div> <!-- end of btn3 -->
                     <div id="titleLinkedin" class="title titleLinkedin">Linkedin</div> <!-- titleLinkedin -->
@@ -53,7 +55,7 @@
                     <div id="btnProj" class="circle cirBottomRight">
                         <a href="https://github.com/JamesPage2020?tab=repositories" target="_blank">
                             <i class="fa-brands fa-github"
-                                style="font-size: var(--iconSize); color: var(--colourLn);"></i>
+                                style="font-size: var(--iconSizeNavbar); color: var(--colourLn);"></i>
                         </a>
                     </div> <!-- end of btn4 -->
                     <div id="titleProj" class="title titleProj">GitHub</div> <!-- end of titleProj -->
@@ -62,7 +64,7 @@
                 <div class="navbox box5">
                     <div id="btnPDF" class="circle PDF">
                         <a href="#">
-                            <i class="fa-solid fa-file" style="font-size: var(--iconSize); color: var(--colourLn);"></i>
+                            <i class="fa-solid fa-file" style="font-size: var(--iconSizeNavbar); color: var(--colourLn);"></i>
                         </a>
                     </div> <!-- end of btn5 -->
                     <div id="titlePDF" class="title titlePDF">Resume</div> <!-- titlePDF -->
@@ -71,29 +73,45 @@
         </div><!-- end of header -->
 
         <div class="page">
-            <div class="column aboutMe">
+            <div class="column aboutMeBody">
                 <p>
                     test paragraph, test paragraph, test paragraph, test paragraph,
                     test paragraph, test paragraph, test paragraph, test paragraph,
                     test paragraph, test paragraph, test paragraph, test paragraph,
                     test paragraph, test paragraph, test paragraph, test paragraph,
                 </p>
-            </div>
-            <!--end of post1-->
+            </div><!--end of aboutMe-->
             <div class="column contactForm">
+                <h2>Contact Me</h2>
                 <p>
-                    form here, form here, form here, form here form here, form here,
-                    form here, form here, form here, form here form here, form here,
-                    form here, form here, form here, form here form here, form here,
-                    form here, form here, form here, form here form here, form here,
-                    form here, form here, form here, form here form here, form here,
+                    Reach me at: <a href="mailto:james.a.page.work@gmail.com">james.a.page.work@gmail.com</a>, or use the form below.
                 </p>
+
+                <fieldset>
+                    <legend>Contact Form:</legend>
+                    <form action="mailto:james.a.page.work@gmail.com" method="POST" enctype="text/plain">
+                        <label>Name:<br>
+                            <input type="text" name="name" id="namebox" size="15" maxlength="30"> <br>
+                        </label>
+                        <label>Email:<br>
+                            <input type="text" name="email" id="emailbox" size="15" maxlength="30"> <br>
+                        </label>
+                        <label>Message:<br>
+                            <textarea name="msg" id="msgbox" cols="30" rows="10"></textarea> <br>
+                        </label>
+                        <button class="btn btnSend" value="Input">
+                            <div id="btnSend" class="circle send">
+                                <i class="fa-solid fa-paper-plane" style="font-size: var(--iconSizeNavbar); color: var(--colourLn);"></i>
+                            </div> <!-- end of Send -->
+                            <div id="titleSend" class="title titleSend">Send</div> <!-- titleSend -->
+                        </button>
+                    </form>
+                </fieldset>
 
             </div><!-- contactForm -->
         </div><!-- end of page -->
+    </div><!-- end of mainPage -->
 
-
-    </div><!-- end of page -->
+    <script src="js/dev.js"></script>
 </body>
-
 </html>
