--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
         <div class="top">
             <div id="btnMe" class="circle cirTop">
                 <a href="devpage.html">
-                    <i class="fa-solid fa-address-book" style="font-size: var(--iconSize); color: var(--colourLn);"></i>
+                    <i class="fa-solid fa-address-book" style="font-size: var(--iconSize); color: var(--colourOrg);"></i>
                 </a>
             </div>
             <!--end of btn1 -->
@@ -28,7 +28,7 @@
                 <div id="btnSkills" class="circle cirCenterLeft">
                     <a href="#">
                         <i class="fa-solid fa-cube" 
-                        style="font-size: var(--iconSize); color: var(--colourLn);"></i>
+                        style="font-size: var(--iconSize); color: var(--colourGr);"></i>
                     </a>
                 </div> <!-- end of btn2 -->
                 <div id="titleSkills" class="title titleSkills">Quick Skills</div> <!-- titleSkills -->
@@ -44,7 +44,7 @@
                 <div id="btnLinkedin" class="circle cirCenterRight">
                     <a href="#">
                         <i class="fa-brands fa-linkedin" 
-                        style="font-size: var(--iconSize); color: var(--colourLn);"></i>
+                        style="font-size: var(--iconSize); color: var(--colourLBlu);"></i>
                     </a>
                 </div> <!-- end of btn3 -->
                 <div id="titleLinkedin" class="title titleLinkedin">Linkedin</div> <!-- titleLinkedin -->
@@ -55,7 +55,7 @@
             <div class="bottomColumns bCol1">
                 <div id="btnPDF" class="circle cirBottomLeft">
                     <a href="#">
-                        <i class="fa-solid fa-file" style="font-size: var(--iconSize); color: var(--colourLn);"></i>
+                        <i class="fa-solid fa-file" style="font-size: var(--iconSize); color: var(--colourRd);"></i>
                     </a>
                 </div> <!-- end of btn4 -->
                 <div id="titlePDF" class="title titlePDF">Resume</div> <!-- titlePDF -->
@@ -64,7 +64,7 @@
             <div class="bottomColumns bCol2">
                 <div id="btnProj" class="circle cirBottomRight">
                     <a href="https://github.com/JamesPage2020?tab=repositories" target="_blank">
-                        <i class="fa-brands fa-github" style="font-size: var(--iconSize); color: var(--colourLn);"></i>
+                        <i class="fa-brands fa-github" style="font-size: var(--iconSize); color: var(--colourPpl);"></i>
                     </a>
                     <!-- <i class="fa-solid fa-file-code"></i> -->
                 </div> <!-- end of btn5 -->
