--- a/homepage.html
+++ b/homepage.html
@@ -8,14 +8,14 @@
     <script src="https://kit.fontawesome.com/093c972912.js" crossorigin="anonymous"></script>
     <!-- https://fontawesome.com/icons/ -->
     <link rel='stylesheet' href='css/home.css' />
-    <title>Circular Layout</title>
+    <title>Home - James A. Page</title>
 </head>
 
 <body>
     <div class="page">
         <div class="top">
             <div id="btnMe" class="circle cirTop">
-                <a href="devpage.html">
+                <a href="aboutpage.html">
                     <i class="fa-solid fa-address-book" style="font-size: var(--iconSize); color: var(--colourOrg);"></i>
                 </a>
             </div>
