--- a/homepage.html
+++ b/homepage.html
@@ -20,13 +20,13 @@
                 </a>
             </div>
             <!--end of btn1 -->
-            <div id="titleMe" class="title titleMe">About Me</div> <!-- titleMe -->
+            <div id="titleMe" class="title titleMe">About</div> <!-- titleMe -->
         </div> <!-- end of top -->
 
         <div class="center">
             <div class="centerColumns cCol1">
                 <div id="btnSkills" class="circle cirCenterLeft">
-                    <a href="#">
+                    <a href="skillspage.html">
                         <i class="fa-solid fa-cube" 
                         style="font-size: var(--iconSize); color: var(--colourGr);"></i>
                     </a>
