--- a/homepage.html
+++ b/homepage.html
@@ -54,7 +54,7 @@
         <div class="bottom">
             <div class="bottomColumns bCol1">
                 <div id="btnPDF" class="circle cirBottomLeft">
-                    <a href="#">
+                    <a href="img/JamesPAGE_resume2022.pdf" target="_blank">
                         <i class="fa-solid fa-file" style="font-size: var(--iconSize); color: var(--colourRd);"></i>
                     </a>
                 </div> <!-- end of btn4 -->
