--- a/aboutpage.html
+++ b/aboutpage.html
@@ -33,7 +33,7 @@
                     <p>
                         An eager Canadian developer and resent <strong class="txtEmphasis"><a
                                 href="img/AdvancedDiploma.jpg" target="_blank">St.Lawrence College</a></strong>'s
-                        graduate of <strong class="txtEmphasis">Computer Programmer Analyst</strong>.
+                        graduate of <strong class="txtEmphasis"><a href="https://www.stlawrencecollege.ca/programs/computer-programming-and-analysis/full-time/kingston" target="_blank">Computer Programmer Analyst</a></strong>.
                     </p>
                 </div><!-- about -->
             </div> <!-- end of aboutCol -->
