--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,7 @@
 
             <div class="centerColumns cCol3">
                 <div id="btnLinkedin" class="circle cirCenterRight">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/james-page-b235a3248/" target="_blank">
                         <i class="fa-brands fa-linkedin" 
                         style="font-size: var(--iconSize); color: var(--colourLBlu);"></i>
                     </a>
