--- a/aboutpage.html
+++ b/aboutpage.html
@@ -33,14 +33,14 @@
 
                     <p>
                         An eager Canadian developer and recent <strong class="txtEmphasis"><a
-                                href="img/AdvancedDiploma.jpg" target="_blank">St.Lawrence College</a></strong>'s
-                        graduate of <strong class="txtEmphasis"><a href="https://www.stlawrencecollege.ca/programs/computer-programming-and-analysis/full-time/kingston" target="_blank">Computer Programmer Analyst</a></strong>.
+                                href="img/AdvancedDiploma.jpg" target="_blank">St.Lawrence College</a></strong>
+                        graduate of <strong class="txtEmphasis"><a href="https://www.stlawrencecollege.ca/programs/computer-programming-and-analysis/full-time/kingston" target="_blank">Computer Programing and Analysis</a></strong>.
                     </p>
                     <p>
                         I am seeking a Junior Programming Position.
                     </p>
                     <p>
-                        Video games have always been a passion of mine; this is what initially got me into code.  When I began to learn to program, I had a very narrow view of the possibilities and versatilities coding has. From self-educating myself I new this is what I wanted to pursue which is why I went to St. Lawrence college’s computer programing and analysis program. 
+                        Video games have always been a passion of mine; this is what initially got me into coding. When I began to learn to program, I had a very narrow view of the possibilities and versatility coding has.  After self-educating myself I knew this is what I wanted to pursue which is why I went to St. Lawrence College for computer programing and have since continued to improve and build on the skills I have learned.
                     </p>
                     
                 </div><!-- about -->
